--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "ngx-toastr": "^14.2.2",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
