--- a/frontend-leis/angular.json
+++ b/frontend-leis/angular.json
@@ -27,6 +27,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                             "src/styles.css",
                             "node_modules/ngx-toastr/toastr.css",
                             "node_modules/primeicons/primeicons.css",
@@ -98,6 +99,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                             "src/styles.css"
                         ],
                         "scripts": []
