--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "animate.css": "^4.1.1",
+    "bootstrap-icons": "^1.8.1",
     "ngx-toastr": "^14.2.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.2.1",
