--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.3.0",
+    "@angular/cdk": "^13.3.2",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
@@ -22,9 +22,14 @@
     "@angular/router": "~13.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^3.4.1",
+    "bootstrap-icons": "^1.8.1",
+    "jquery": "^3.6.0",
+    "ngx-quill": "^16.2.0",
     "ngx-toastr": "^14.2.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.2.1",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,6 +40,7 @@
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/quill": "^2.0.9",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
