--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -26,7 +26,6 @@
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
     "ngx-quill": "^16.2.0",
-    "bootstrap-icons": "^1.8.1",
     "ngx-toastr": "^14.2.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.2.1",
@@ -49,5 +48,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.2.6.",
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC"
 }
