se creo el modulo Laboratorios(administrar, Listar)

--- a/frontend-leis/angular.json
+++ b/frontend-leis/angular.json
@@ -36,9 +36,15 @@
                             "node_modules/primeicons/primeicons.css",
                             "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
                             "node_modules/primeng/resources/primeng.min.css",
-                            "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+                            "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+
                         ],
-                        "scripts": []
+                        "scripts": [
+                          "node_modules/jquery/dist/jquery.min.js",
+                          "node_modules/@popperjs/core/dist/umd/popper.min.js",
+                          "node_modules/bootstrap/dist/js/bootstrap.min.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
