--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.6.0",
     "ngx-quill": "^16.2.0",
     "ngx-toastr": "^14.2.2",
+    "popper.js": "^1.16.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.2.1",
     "quill": "^1.3.7",
