--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -24,9 +24,9 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^3.4.1",
     "bootstrap-icons": "^1.8.1",
+    "chart.js": "^3.7.1",
     "jquery": "^3.6.0",
     "ngx-quill": "^16.2.0",
-    "bootstrap-icons": "^1.8.1",
     "ngx-toastr": "^14.2.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.2.1",
