--- a/frontend-leis/angular.json
+++ b/frontend-leis/angular.json
@@ -37,8 +37,11 @@
                             "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
                             "node_modules/primeng/resources/primeng.min.css",
                             "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+
                         ],
-                        "scripts": []
+                        "scripts": [
+                          "node_modules/chart.js/dist/Chart.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
