--- a/frontend-leis/angular.json
+++ b/frontend-leis/angular.json
@@ -35,19 +35,19 @@
                             "node_modules/ngx-toastr/toastr.css",
                             "node_modules/primeicons/primeicons.css",
                             "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-                            "node_modules/primeng/resources/primeng.min.css"
+                            "node_modules/primeng/resources/primeng.min.css",
                             "node_modules/bootstrap-icons/font/bootstrap-icons.css",
                             "node_modules/quill/dist/quill.core.css",
                             "node_modules/quill/dist/quill.snow.css"
                         ],
-                      
+
                         "scripts": [
                           "node_modules/chart.js/dist/Chart.js",
                           "node_modules/quill/dist/quill.js",
                           "node_modules/bootstrap/dist/js/bootstrap.min.js"
 
-                        ]             
-                        
+                        ]
+
                     },
                     "configurations": {
                         "production": {
