--- a/frontend-leis/package.json
+++ b/frontend-leis/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@popperjs/core": "^2.11.5",
+    "@types/chart.js": "^2.9.37",
     "animate.css": "^4.1.1",
     "bootstrap": "^3.4.1",
     "bootstrap-icons": "^1.8.1",
